# Product-Footprint-Calculator-Add-On

./: .gitignore  README.md  pyproject.toml  test.py
src/EPREL_scrapper/scrapper/: __init__.py  base_scrapper.py  test_scrapper.py  water_heater_scrapper.py
src/EPREL_scrapper/scrapper_playwright/: EPREL_com.py  test_scrapper.py
src/EPREL_scrapper/scrapper_playwright/func/: scrapper_func.py
src/api_client/: build_ndjson.py  call_api_eprel.py  test_api.py
src/api_client/func/: flatten_json.py
