[tool.poetry]
name = "product-footprint-calculator-add-on"
version = "0.1.0"
description = "the libraries to install for using the project"
authors = ["Gwhite <guilhem.dolet@gmail.com>"]
readme = "README.md"
packages = [{include = "EPREL_scrapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.29.0"
requests = "^2.32.3"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
