[tool.poetry]
name = "product-footprint-calculator-add-on"
version = "0.1.0"
description = "the libraries to install for using the project"
authors = ["Gwhite <guilhem.dolet@gmail.com>"]
readme = "README.md"
packages = [{include = "EPREL_scrapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
playwright = "^1.51.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
